2015-05-15  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/RInsideCommon.h: Do not include RInterface.h here as
	the file gets included from several source files

	* src/RInside.cpp: But rather include RInterface.h here just once

2015-01-27  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.12

2015-01-08  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Description): Updated Description: to note that we now
	have eight examples subdirectories, and that (all but one of) these
	example directories use Makefiles with GNU make extensions, which
	have therefore been renamed to GNUmakefile to please R CMD check
	* DESCRIPTIION (Version): Bumped Version: and Date:

	* inst/examples/armadillo/GNUmakefile: Renamed from Makefile
	* inst/examples/eigen/GNUmakefile: Ditto
	* inst/examples/mpi/GNUmakefile: Ditto
	* inst/examples/sandboxed_server/GNUmakefile: Ditto
	* inst/examples/standard/GNUmakefile: Ditto
	* inst/examples/threads/GNUmakefile: Ditto
	* inst/examples/wt/GNUmakefile: Ditto

2014-11-25  Christian Authmann  <christian@authmann.de>

	* inst/examples/sandboxed_server/: New example of a 'sandboxed'
	server for safer communication [of a subset of types] out of process

2014-10-10  Christian Authmann  <christian@authmann.de>

	* inst/examples/standard/rinside_sample16.cpp: New example
	demonstrating object wrapping and exposing C++ functions
	* inst/examples/standard/rinside_sample17.cpp: New example
	demonstrating the same using C++11 features

2014-09-08  Dirk Eddelbuettel  <edd@debian.org>

	* src/RInside.cpp (WriteConsole_): Applied correction by Christian
	Authmann in GitHub PR #5
	* inst/examples/standard/rinside_callbacks1.cpp: New example also
	supplied by Christian Authmann in PR #5

2014-07-28  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/standard/rinside_module_sample0.cpp: Commented-out
	two short segments in already-disabled file which remains defunct

2014-07-08  Dirk Eddelbuettel  <edd@debian.org>
