@@ -13,12 +13,15 @@ env:
     - _R_CHECK_FORCE_SUGGESTS_=FALSE
 
 before_install:
+  ## PPA for Rcpp and some other packages
+  - sudo add-apt-repository -y ppa:edd/misc
+  ## r-travis by Craig Citro et al
   - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
   - chmod 755 ./travis-tool.sh
   - ./travis-tool.sh bootstrap
 
 install:
-  - ./travis-tool.sh install_r Rcpp
+  - ./travis-tool.sh install_aptget r-cran-rcpp
 
 script: 
   - ./travis-tool.sh run_tests
