@@ -1,3 +1,7 @@
+2015-05-16  Dirk Eddelbuettel  <edd@debian.org>
+
+	* .travis.yml (install): Use ppa for r-cran-rcpp in .travis.yml
+
 2015-05-15  Dirk Eddelbuettel  <edd@debian.org>
 
 	* inst/include/RInsideCommon.h: Do not include RInterface.h here as
